# StockBrief-be

./: .env.example  .gitignore  Dockerfile.agentcore  pyproject.toml  requirements-agentcore.txt
.github/: dependabot.yml
.github/workflows/: backend-ci.yml  backend-dev-deploy.yml  codex-pr-review.yml  pr-auto-merge.yml
app/: agentcore_runtime.py  auth.py  config.py  db.py  main.py  maintenance.py  models.py  orm.py  protected_routes.py  routes.py
app/routes/: chat.py
app/seed/: stock_universe.py
app/services/: candidate_service.py  evidence_service.py  ingestion.py  ingestion_idempotency.py  stock_service.py
scripts/: bootstrap_github_oidc.sh  check_candidate_query_perf.py  check_deployed_chat_smoke.py  check_hosted_auth_smoke.py  check_recommendation_quality_smoke.py  package_api_lambda.sh  verify_deploy_account_matches_backend.sh
tests/: test_agentcore_provider.py  test_ai_safety_policy.py  test_api_contract_snapshot.py  test_auth.py  test_candidate_query_perf_script.py  test_chat_api.py  test_database_resolution.py  test_deployed_chat_smoke_script.py  test_deployment_docs.py  test_evidence_gate.py  test_external_adapters.py  test_hosted_auth_smoke_script.py  test_ingestion_idempotency.py  test_ingestion_operations_docs.py  test_ingestion_pipeline.py  test_lambda_maintenance.py  test_me_api.py  test_recommendation_api.py  test_recommendation_factor_rank.py  test_recommendation_materializer.py  test_recommendation_quality_smoke_script.py  test_response_helpers.py  test_schema.py  test_stock_evidence_api.py  test_terraform_infra.py  test_ticker.py
(+47 files in other folders)
