[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stockbrief-api"
version = "0.1.0"
description = "FastAPI backend for StockBrief"
requires-python = ">=3.13"
dependencies = [
  "alembic>=1.14.0,<2.0.0",
  "boto3>=1.34.0,<2.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "mangum>=0.19.0,<1.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "PyJWT[crypto]>=2.10.0,<3.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "sqlalchemy>=2.0.35,<3.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.scripts]
stockbrief-seed-stock-universe = "app.seed.seed_stock_universe:main"

[project.optional-dependencies]
agentcore = [
  "strands-agents>=1.0.0,<2.0.0",
]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pytest>=8.3.0,<10.0.0",
  "pytest-cov>=5.0.0,<7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["migrations*", "tests*"]
